--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <body>
         <h2>This is an example</h2>
         <p>This is an update</p>
+        <p>this is the second update</p>
     </body>
 </html>
