--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
         <h2>This is an example</h2>
         <p>This is an update</p>
         <p>this is the second update</p>
+        <h1>This is another update</h1>
     </body>
 </html>
