--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <body>
+        <header>Welcome to git 101</header>
         <h2>This is an example</h2>
         <p>This is an update</p>
         <p>this is the second update</p>
